kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0

  template:
    metadata:
      labels:
        app: homework
    spec:
      nodeSelector:
        homework: "true"

      volumes:
      - name: homework-volume
        persistentVolumeClaim:
          claimName: homework-pvc
      - name: config-map-volume
        configMap:
          name: homework-config-map

      containers:
      - name: nginx
        image: nginx:alpine
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: homework-volume
            mountPath: /homework
          - name: config-map-volume
            mountPath: /homework/conf
        command: ["/bin/sh", "-c"]
        args:
          - |
            ln -sf /homework/index.html /usr/share/nginx/html/index.html
            ln -sf /homework/conf /usr/share/nginx/html/conf
            sed -i 's/listen       80;/listen       8000;/g' /etc/nginx/conf.d/default.conf
            nginx -g 'daemon off;'
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
